# Firmware.LCR_Meter

./: CMakeLists.txt  fft.py
CMSIS_DSP/Source/: arm_cos_sin_table_f32.c
CubeMX/: .mxproject  H730_LCR.ioc  Makefile  STM32H730VBTx_FLASH.ld  STM32H730XX_FLASH.ld
CubeMX/Core/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
CubeMX/Core/Src/: adc.c  dac.c  dma.c  gpio.c  main.c  rng.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  tim.c  usart.c  usb_otg.c
Inc/: app_shared.hpp  complex.hpp  lcd.hpp  math_android.hpp  utils.hpp
Src/: MGLCD_font.cpp  STM32H730VBTx_FLASH.ld  display_lcr.cpp  fault.cpp  lcd.cpp  main.cpp  main_cycle.cpp  math_android.cpp  measurement_hw.cpp  syscalls.c  sysmem.c
